[package]
name = "rust-boilerplate"
version = "0.1.0"
authors = ["fengjianlin <fengjianlin@moyi365.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solution = { path = "./solution" }
part_2 = { path = "./part_2" }
part_3 = { path = "./part_3" }
macros = { path = "./macros" }
utils = { path = "./utils" }
