[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "52.0.0", features = ["ffi"] }
async-ffi = "0.5.0"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["rt", "time", "sync", "macros"] }
