[package]
edition = "2021"
name = "native-computation"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.8", default-features = false, features = ["tokio_rt"] }
napi-derive = "2.16.8"
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "1.38.0", features = ["rt", "time", "sync", "macros"] }


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
