[package]
name = "quickjs-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
once_cell = "1.17.0"
quickjs-wasm-rs = { version = "0.1.4", features = ["json"] }

[features]
default = []
console = []
